Fix/editor tooltip dark mode (#12)
* Fix Editor tooltip for dark mode

* add more

--- a/src/renderer/assets/scss/colors/dark.scss
+++ b/src/renderer/assets/scss/colors/dark.scss
@@ -308,6 +308,10 @@
       .ce-toolbox {
         background: $dark-lighter;
         border-radius: $radius;
+        border: 1px solid $grey-darker;
+        .ce-toolbox__button {
+          color: $dark-text;
+        }
       }
     }
 
@@ -315,17 +319,21 @@
       background-color: $dark-light;
       border: 1px solid $dark-lighter;
 
-      .ce-settings__button {
+      .ce-settings__button,.cdx-settings-button {
         color: $dark-text;
         &:hover {
           background-color: $dark-lighter;
         }
-        &--confirm {
-          color: $white-ter;
+        &--confirm, &--active {
+          color: $primary;
         }
       }
+
     }
 
+    .ce-inline-tool {
+      color: $dark-text;
+    }
     .cdx-codemirror {
       .CodeMirror {
         background-color: $dark-light !important;
@@ -352,15 +360,41 @@
       }
     }
 
+    .ce-inline-toolbar{
+      .ce-inline-toolbar__toggler-and-button-wrapper{
+        background-color: $dark-lighter;
+        border-radius: $radius;
+        border: 1px solid $grey-darker;
+      }
+
+      .ce-inline-tool {
+        &:hover {
+          color: $white-ter;
+          background-color: rgba(34,186,255,.08)!important;
+        }
+      }
+
+      .ce-conversion-toolbar {
+        background-color: $dark-lighter;
+        .ce-conversion-tool {
+          &:hover{
+            background-color: rgba(34,186,255,.08)!important;
+          }
+        }
+      }
+
+      .ce-inline-toolbar__dropdown {
+        &:hover{
+          color: $white-ter;
+          background-color: rgba(34,186,255,.08)!important;
+        }
+      }
+    }
     .tc-table__wrap {
       border: 1px solid $dark-lighter;
 
       .tc-table__cell {
         border: 1px solid $dark-lighter;
-      }
-
-      tc-table {
-
       }
     }
   }
